TWINS-770: refactor after code review 4